--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Notezz</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1><img src="3d-notes.png" alt=""> Notez</h1><br><br>
+        <button><img src="pencil.png" alt="">Create notes</button>
+    </div>
     
 </body>
 </html>
