this is also a commit

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <body>
     <div class="container">
         <h1><img src="3d-notes.png" alt=""> Notez</h1><br><br>
-        <button><img src="pencil.png" alt="">Create notes</button>
+        <button class="btn" ><img src="pencil.png" alt="">Create notes</button>
+        <div class="notes-container">
+            <!-- <p contenteditable="true" class="inputbox">
+                <img src="delete.png" >
+            </p> -->
+        </div>
     </div>
-    
+<script src="script.js"></script>    
 </body>
 </html>
