--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1><img src="3d-notes.png" alt=""> Notez</h1><br><br>
         <button class="btn" ><img src="pencil.png" alt="">Create notes</button>
         <div class="notes-container">
-            <!-- <p contenteditable="true" class="inputbox">
+            <p contenteditable="true" class="inputbox">
                 <img src="delete.png" >
-            </p> -->
+            </p>
         </div>
     </div>
 <script src="script.js"></script>    
